tests/snapshots/examples_fixtures/io__aoc_day12_haskell_style.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/io/aoc_day12_haskell_style.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `str_at`.

  examples/io/aoc_day12_haskell_style.flx:60:13
   |
60 |     let t = str_at(tokens, idx)
   |             ^^^^^^

Hint:
  Define it first: let str_at = ...;


error[E300]: Type Mismatch

I found a type mismatch.

  examples/io/aoc_day12_haskell_style.flx:92:55
   |
92 |         parse_areas(lines, idx + 1, push(acc, [|w, h, counts|]))
   |                                                       ^^^^^^
   |                                                       ------ this expression has type `Array<Option<Int>>`

   |                                                       ------ this type mismatch is reported here

Note:
  expected type: Int
  found type: Array<Option<Int>>
  the conflicting types meet at this expression

Help:
  These two types are not compatible.


error[E300]: Argument Type Mismatch

I found the wrong type in the 2nd argument to `weighted_sum`.

  examples/io/aoc_day12_haskell_style.flx:127:41
    |
100 | fn weighted_sum(block_sizes, counts, idx, acc) {
101 |     if idx >= len(block_sizes) || idx >= len(counts) {
102 |         acc
103 |     } else {
104 |     weighted_sum(block_sizes, counts, idx + 1, acc + (int_at(block_sizes, idx) * int_at(counts, idx)))
105 | }
106 | }
107 | 
108 | fn area_at(arr, idx) {
109 |     match arr[idx] {
110 |         Some(v) -> v,
111 |         _ -> [||]
112 |     }
113 | }
114 | 
115 | fn count_valid_areas(block_sizes, areas, idx, acc) {
116 |     if idx >= len(areas) {
117 |         acc
118 |     } else {
119 |     let area = area_at(areas, idx)
120 |     let w = int_at(area, 0)
121 |     let h = int_at(area, 1)
122 |     let counts = match area[2] {
123 |         Some(v) -> v,
124 |         _ -> [||]
125 |     }
126 |     let lhs = w * h
127 |     let rhs = weighted_sum(block_sizes, counts, 0, 0)
    |                                         ^^^^^^
    |                                         ------ this argument has type `Int`

Note:
  expected argument type: Array<Int>
  found argument type: Int
  the actual argument type is inferred from this expression
  the expected argument type comes from the function signature

Help:
  Pass a `Array<Int>` value as the 2nd argument.

Found 3 errors.
== stdout ==
<not executed>
